fixed banner not showing over the video

--- a/projWebsite/style.css
+++ b/projWebsite/style.css
@@ -31,6 +31,7 @@ section {
     background-position: right center;
 }
 
+
 .banner h2 {
     font-size: 2.5em;
     color: #555;
@@ -56,16 +57,35 @@ section {
     color: #000;
     margin-top: 20px;
     padding: 10px 30px;
+    border-radius: 50px;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: 500;
     font-size: 18px;
-    transition: 0.2s;
+    transition: 0.4s;
+    animation: fadeInAnimation ease 4s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 .banner .btn:hover {
     letter-spacing: 6px;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    20% {
+        opacity: 0.1;
+    }
+    80% {
+       opacity: 0.9;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 
@@ -159,7 +179,7 @@ img {
     max-width: 100%;
 }
 
-/*********CSS For The Video*********/
+/*********CSS For The Video Purple Digital *********/
 
 .showcase {
     position: relative;
@@ -172,7 +192,7 @@ img {
     align-items: center;
     background: #111;
     color: #fff;
-    z-index: 2;
+    z-index: 1;
     /*box-sizing: border-box;
     margin: 0;
     padding: 0;*/
@@ -279,6 +299,24 @@ img {
     }
     
 }
+
+
+
+
+
+/******* CSS For Video Yellow Lquid **********/
+
+
+
+/*.yellowLiq {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}*/
 
 
 
